--- a/custom.css
+++ b/custom.css
@@ -1,10 +1,10 @@
 body{
-    background: #383847;
+    background: #fafffd;
     padding-bottom: 50px;
 }
 
 body, input, select, textarea {
-    color: #c17b9f;
+    color: #383847;
     font-family: "Verdana", sans-serif;
     font-weight: 300;
     font-size: 2.2rem;
@@ -18,7 +18,7 @@ hr {
   -moz-border-right-colors: none;
   -moz-border-top-colors: none;
   border-color: #c17b9f;
-  color: #c17b9f;
+  color:  #383847;
   border-style: solid none;
   border-width: 1px 0;
   margin: 18px 0;
@@ -27,7 +27,7 @@ hr {
 .page-header {
   padding-bottom: 9px;
   margin: 40px 0 20px;
-  border-bottom: 1px solid #c17b9f;
+  border-bottom: 1px solid  #383847;
 }
 
 
