--- a/custom.css
+++ b/custom.css
@@ -17,7 +17,7 @@ hr {
   -moz-border-left-colors: none;
   -moz-border-right-colors: none;
   -moz-border-top-colors: none;
-  border-color: #c17b9f;
+  border-color: #383847;
   color:  #383847;
   border-style: solid none;
   border-width: 1px 0;
@@ -33,8 +33,8 @@ hr {
 
 .btn-default {
   color: #333;
-  background-color: #c17b9f;
-  border-color: #404040;
+  background-color: #fafffd;
+  border-color: #383847;
 }
 
 
